# user/docs/swagger.json
@@ -56,8 +56,7 @@
             "required": [
                 "email",
                 "name",
-                "password",
-                "type"
+                "password"
             ],
             "properties": {
                 "email": {
@@ -76,7 +75,8 @@
                     "description": "使用者類型 (一般使用者, 管理者)",
                     "enum": [
                         "normal",
-                        "admin"
+                        "admin",
+                        ""
                     ],
                     "allOf": [
                         {
